[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/user-interface/navigation/navigation.gd" type="Script" id=1]
[ext_resource path="res://scenes/user-interface/navigation/camera.gd" type="Script" id=2]

[node name="Navigation" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ArrowContainer" type="MarginContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -30.0
margin_bottom = 30.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="LeftArrow" type="Button" parent="ArrowContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 56.0
margin_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Left"
align = 0

[node name="RightArrow" type="Button" parent="ArrowContainer"]
margin_left = 960.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 40.0
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Right"
align = 2
icon_align = 2

[node name="CameraPivot" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2.54282, 1, 0 )
script = ExtResource( 2 )
